Solve issue with vertical scrollbar

--- a/ui/main/src/app/modules/card/components/card-body/card-body.component.scss
+++ b/ui/main/src/app/modules/card/components/card-body/card-body.component.scss
@@ -13,6 +13,7 @@
     display: inline-block;
     width: 100%;
     margin-bottom: 5px;
+    margin-top: -4px;
 }
 
 .opfab-tab {
